# lisplens

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  Cargo.toml  README.md  THIRD-PARTY-LICENSES.md  about.hbs  about.toml  build.rs  deny.toml
.github/homebrew/: lisplens.rb.tmpl
.github/workflows/: ci.yml  release.yml
docs/: CURRENT_WORKS.md  lispexp-integration.md  rewrite.md
docs/adr/: 0001-separate-structural-and-line-hash-edit-modes.md  0002-shared-core-edit-verbs-with-structural-extras.md  0003-semantic-ceiling-form-annotator-level.md  0004-zero-config-first-persist-only-the-irreducible.md  0005-validate-then-write-reject-only-new-parse-errors.md  0006-mode-first-command-surface-with-batch-edits.md  0007-both-modes-share-one-content-hash-drift-mechanism.md  0008-hash-form-xxh3-4hex-verbatim-span-two-tier.md  0009-structural-falls-back-to-line-hash-dispatch-signature-progressive.md  0010-edits-single-file-atomic-discovery-project-wide.md  0011-formatting-is-lisplens-responsibility-pluggable-formatter.md  0012-adopt-paredit-lispy-structural-vocabulary.md  0013-one-canonical-result-terse-text-default-json-opt-in.md  0014-library-resolution-scope-and-project-profile-schema.md  0015-zero-config-scans-repo-local-manifests.md  0016-structural-address-is-an-s-expression-hash-shorthand.md  0017-strict-file-level-drift-gating-by-default.md  0018-hash-first-anchor-referencing-for-v1.md  0019-single-edit-batch-model-two-representations.md  0020-mode-first-command-and-mcp-tool-surface.md  0021-patch-dsl-grammar-heredoc-payloads.md  0022-dispatch-signature-in-outline-readability-not-addressing.md  0023-edit-result-new-hash-and-warnings-no-auto-reread.md  0024-validate-then-write-warnings-are-disappeared-definitions.md  0025-formatting-on-edit-touched-region-plus-format-command.md  0026-native-indenter-spec-driven-fidelity-grounded-in-emacs.md  0027-auto-format-is-structural-only-line-hash-stays-literal.md  0028-indenter-is-a-standalone-block-level-procedure.md  0029-format-config-resolution-order.md  0030-nameless-aware-indentation.md  0031-multi-dialect-indenter-dispatch.md  0032-atomic-refactoring-procedures.md  0033-rewrite-structural-pattern-language.md  0034-extract-into-a-new-function.md  0035-block-extraction-anchor-count.md  0036-extract-non-defun-kinds.md  0037-extract-multi-site.md  0038-extract-generalize.md  0039-clojure-indent-engine.md  0040-clojure-fixed-tonsky-style.md  (+8 more)
docs/agents/: issue-tracker.md
docs/dev/: architecture.md  (+1 more)
emacs/: README.md  lisplens-parinfer.el
scripts/: generate-third-party-licenses.mjs
src/: apply.rs  config.rs  diff.rs  edit.rs  format.rs  hash.rs  lib.rs  linehash.rs  main.rs  mcp.rs  nameless.rs  parinfer.rs  patch.rs  refactor.rs  resolve.rs  search.rs  sexpr.rs  structural.rs  write.rs
(+31 files in other folders)
