[package]
name = "lisplens"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "MPL-2.0"
description = "Token-efficient, polyglot Lisp editing for AI agents (CLI/MCP), built on lispexp"
readme = "README.md"
repository = "https://github.com/rigortype/lisplens"
authors = ["USAMI Kenta <tadsan@zonu.me>"]
keywords = ["lisp", "s-expression", "editing", "mcp", "agent"]
categories = ["command-line-utilities", "development-tools"]
# Keep the published crate to code + user docs; agent/CI tooling isn't shipped.
exclude = ["/.github", "/.claude", "/AGENTS.md", "/CLAUDE.md", "/docs/notes", "/docs/lispexp-feedback"]

[dependencies]
lispexp = "0.5"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
tempfile = "3"
serde_json = "1"
