[package]
name = "lisplens"
version = "0.4.0"
edition = "2021"
license = "MPL-2.0"
description = "Token-efficient, polyglot Lisp editing for AI agents (CLI/MCP), built on lispexp"
readme = "README.md"
repository = "https://github.com/rigortype/lisplens"
authors = ["USAMI Kenta <tadsan@zonu.me>"]
keywords = ["lisp", "s-expression", "editing", "mcp", "agent"]
categories = ["command-line-utilities", "development-tools"]
# Keep the published crate to code + user docs; agent/CI tooling and the
# developer-facing ADRs aren't shipped.
exclude = ["/.github", "/.claude", "/skills", "/emacs", "/AGENTS.md", "/CLAUDE.md", "/docs/adr", "/docs/notes", "/docs/lispexp-feedback"]

[dependencies]
lispexp = "0.7"
lispexp-emacs = "0.2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
tempfile = "3"
serde_json = "1"
# Display-width (East Asian Width) column measurement, matching Emacs's
# `current-column` for multi-byte glyphs in the formatter (ADR-0031).
unicode-width = "0.2"
